--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
 
-    <div class="jumbotron text-center">
+    <div id="indexHeader" class="jumbotron text-center">
         <h1>Community Events Board</h1>
         <!-- <img src="img/savage21.jpg" alt="21 Savage Profile Photo"> -->
 
