--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
 
     <div class="page-header text-center">
         <h1>Community Events</h1>
@@ -57,19 +57,19 @@
         </div>
         <!-- <% } %> -->
     </div>
-  <div id="addEventDiv" class="col-sm-12">
-    <h2>Add an event</h2>
-      <form action="/messages" method="POST">
-        <input type="text" placeholder="Username" name="username">
-        <input type="text" placeholder="Event Title" name="event">
-        <input type="text" placeholder="Description" name="msg">
-        <input type="datetime-local" name="date">
-        <input type="text" placeholder="Location" name="location">
-
-        <button type="submit">Submit</button>
-      </form>
-    </div>
 </div>
+<div id="addEventDiv" class="container text-center bg-white">
+  <h2>Add an event</h2>
+    <form action="/messages" method="POST">
+      <input type="text" placeholder="Username" name="username">
+      <input type="text" placeholder="Event Title" name="event">
+      <input type="text" placeholder="Description" name="msg">
+      <input type="datetime-local" name="date">
+      <input type="text" placeholder="Location" name="location">
+
+      <button type="submit">Submit</button>
+    </form>
+  </div>
 
 <script src="main.js"></script>
 
